--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,16 +9,16 @@
 $(function() {
   $(".js-more").on("click", function() {
     var id = $(this).data("id");
-    $.get("/products/" + id + "/description", function(description) {
-      $.get("/products/" + id + "/inventory", function(inventory) {
-        var inventoryText = "<strong>Available</strong>";
-        if(inventory === "false"){
-          inventoryText = "<strong>Sold Out</strong>";
-        }
-        var descriptionText = "<p>" + description + "</p><p>" + inventoryText + "</p>";
-        $("#product-" + id).html(descriptionText);
-      });
-    });
+   $.get("/products/" + id + ".json", function(data){
+      let  inventoryText = "<strong>Available</strong>";
+
+      if(data['inventory'] === 0) {
+        inventoryText = "<strong>Sold Out</strong>";
+      }
+
+      let descriptionText = "<p>" + data["description"] + "</p>"; 
+      $("#product-" + id).html('DESCRIPTION: ' + descriptionText + 'STATUS: ' + inventoryText);
+    })
   });
 });
 </script>
